<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tickmate</string>
    <string name="action_settings">Settings</string>
    <string name="title_section_ticks">My ticks</string>
    <string name="title_section_weeks">Weeks</string>
    <string name="title_section_months">Months</string>
    <string name="title_activity_edit_tracks">My tracks</string>
    <string name="my_tracks">My tracks</string>
    <string name="title_activity_choose_track">Add track</string>
    <string name="choose_track">Add track</string>
    <string name="title_activity_edit_track">Edit track</string>
    <string name="edit_description_hint">Description</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="inactive">inactive</string>
    <string name="edit">Edit</string>
    <string name="deactivate">Deactivate</string>
    <string name="delete">Delete</string>
    <string name="title_activity_show_track">Track details</string>
    <string name="title_section_weekdays">Days of week</string>
    <string name="numer_of_occurances">Number of occurrences:</string>
    <string name="no_tracks_found">No tracks have been added for this group. Tap here to open the track list editor.</string>
    <string name="multiple_entries">Multiple entries per day</string>
    <string name="tick_deleted">Removed last tick.</string>
    <string name="alert_delete_track_title">Delete track</string>
    <string name="jump_to_date">Jump to date…</string>
    <string name="jump_to_today">Jump to today</string>
    <string name="title_activity_about">About Tickmate</string>
    <string name="title_icon_chooser">Choose an icon</string>
    <string name="about_description">Tickmate is basically a one bit journal. For each day, you can specify
        whether something has occurred or not. The occurrences can be arbitrary things, like flossing your
        teeth or having a drink. You are able to quantify your habits and the accumulated data can be
        displayed for the past weeks or months to track changes over time. This way, it may help you to
        get over your old habits or embody new ones.
        \n\nTickmate is open source, GPLv3 licensed software.
        \n\nContains icons from the Glyphicons FREE icon set (CC-BY-3.0)
    </string>
    <string name="import_db">Import database</string>
    <string name="export_db">Backup database</string>
    <string name="import_db_success">Database imported successfully.</string>
    <string name="import_db_failed">Database import failed.</string>
    <string name="export_db_success">Database exported successfully. </string>
    <string name="import_db_none_found">No backup databases have been found.</string>
    <string name="import_db_really">Are you sure that you want to import the selected database? This will replace all tracks and ticks and will NOT be reversible.</string>
    <string name="show_track_total">Total</string>
    <string name="show_track_weeklymean">Weekly mean</string>
    <string name="show_track_dayssincelast">Days since last</string>

    <!-- New in 1.2.0 -->

    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="activate">Activate</string>
    <string name="track_name">Name</string>
    <string name="track_enabled">Enabled</string>
    <string name="track_icon">Symbol</string>
    <string name="title_section_quarters">Quarters</string>

    <!-- New in 1.2.2 -->
    <string name="alert_delete_track_message">Are you sure you want to delete this track? This can\'t be undone and your ticks will be lost unless you made a backup.</string>

    <!-- New in 1.2.3 -->
    <string name="title_section_years">Years</string>
    <string name="pref_title_reverse_date_display_order">Descending date order</string>
    <string name="pref_description_reverse_date_display_order">Display later days at the top</string>
    <string name="pref_title_limit_active_date">Editable days</string>
    <string-array name="pref_titles_active_date">
        <item>Active day only</item>
        <item>Active day and day before</item>
        <item>Active day and day/weekend before</item>
        <item>All days</item>
    </string-array>
    <string name="notify_user_ticking_disabled">Changing this tick is disabled. You can specify which days are editable in the settings.</string>

    <!-- New in 1.3.0 -->
    <string name="pref_title_groups">Groups</string>
    <string name="pref_title_tracks">Tracks</string>
    <string name="menu_edit_groups">Edit Groups</string>
    <string name="title_activity_edit_groups">My Groups</string>
    <string name="menu_add_group">Add Group</string>
    <string name="alert_delete_group_title">Delete group</string>
    <string name="alert_delete_group_message">Are you sure you want to delete this group? This can\'t be undone.</string>
    <string name="title_activity_choose_group">Add group</string>
    <string name="group_name">Name</string>
    <string name="title_activity_edit_group">Edit group</string>
    <string name="no_groups_found">No groups have been found. Do you want to open the group editor?</string>
    <string name="group_all_name">All</string>

    <!-- New in 1.4.0 -->
    <string name="title_color_chooser">Color picker</string>
    <string name="pref_title_color">Color</string>

    <!-- New in 1.4.2 -->
    <string name="title_section_streaks">Streaks/Breaks</string>
    <string name="longest_streak_on">Longest streak</string>
    <string name="longest_streak_off">Longest break</string>
    <string name="pref_multiple_entries_enabled_summary">Multiple taps on a day will be counted. Use long press to decrease the counter.</string>
    <string name="backup_folder">The backup folder is:</string>

    <!-- New in 1.4.4 -->
    <string name="pref_title_long_click">Long click on tick</string>
    <string-array name="pref_titles_long_click">
        <item>Enter number of ticks</item>
        <item>Remove last tick</item>
    </string-array>
    <string name="set_number_of_ticks">Number of ticks %1$s</string>
    <string name="pref_title_trend_range">Trend range</string>
    <string-array name="pref_titles_trend_range">
        <item>1-week trend</item>
        <item>2-week trend</item>
        <item>1-month trend</item>
        <item>3-month trend</item>
        <item>6-month trend</item>
        <item>1-year trend</item>
    </string-array>

    <!-- New in 1.4.6 -->
    <string name="pref_category_main">Main screen</string>
    <string name="pref_category_track">Track screen</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="reminder_title">Tickmate reminder</string>
    <string name="reminder_text">Tap to enter your ticks for today</string>
    <string name="reminder_settings_title">Tickmate reminder</string>
    <string name="reminder_settings_summary">Issue a daily notification to do my ticks</string>
    <string name="reminder_notification_time">Time of day</string>
    <string name="remind_me_at">Remind me at</string>

    <string name="export_error_activity_not_found">ACTION_CREATE_DOCUMENT not available: Please enable File Manager for export.</string>
    <string name="import_error_activity_not_found">ACTION_CREATE_DOCUMENT not available: Please enable File Manager for import.</string>

    <!-- New in 1.4.12 -->
    <string name="pref_title_date_format">Date format</string>
    <string name="pref_title_date_format_explanation">Override system date format (e.g. mm-DD-yyyy)</string>
</resources>
