<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBoxPreference
                android:key="enabled"
                android:title="@string/track_enabled"
                />
        
        <EditTextPreference
                android:key="name"
                android:title="@string/track_name"
                 />
        
        <de.smasi.tickmate.prefs.IconPreference
               android:icon="@drawable/glyphicons_334_candle_white"
                android:key="icon"
                android:title="@string/track_icon"
                 />
     
        <EditTextPreference
                android:key="description"
                android:title="@string/edit_description_hint"
                />
         
        <CheckBoxPreference
                android:key="multiple_entries_enabled"
                android:title="@string/multiple_entries"
                android:summary="@string/pref_multiple_entries_enabled_summary"
                />

    <de.smasi.tickmate.prefs.GroupListPreference
        android:key="groups"
        android:title="@string/pref_title_groups"
        />

    <de.smasi.tickmate.prefs.TickColorPreference
        android:key="tick_button_color"
        android:title="@string/pref_title_color"
        />


</PreferenceScreen>