<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/edit_tracks_moveup"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/move_up">
    </item>
    
       <item
        android:id="@+id/edit_tracks_movedown"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/move_down">
    </item>
    
    <item
        android:id="@+id/edit_tracks_edit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/edit">
    </item>
   
    <item
        android:id="@+id/edit_tracks_deactivate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/deactivate">
    </item>
    
    <item
        android:id="@+id/edit_tracks_activate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/activate">
    </item>
    
    
    <item
        android:id="@+id/edit_tracks_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete">
    </item>    
</menu>
