<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowTrackActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/image_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/glyphicons_004_girl_white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/TextView_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingTop="20dp" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <de.smasi.tickmate.widgets.SummaryNumber
                        android:id="@+id/summaryNumber1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0" />

                    <de.smasi.tickmate.widgets.SummaryNumber
                        android:id="@+id/summaryNumber2"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_weight="1.0" />

                    <de.smasi.tickmate.widgets.SummaryNumber
                        android:id="@+id/summaryNumber3"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_weight="1.0" />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_section_weekdays"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <de.smasi.tickmate.widgets.SummaryGraph
                android:id="@+id/summaryGraph_weekdays"
                android:layout_width="wrap_content"
                android:layout_height="82dp" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_section_weeks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <de.smasi.tickmate.widgets.SummaryGraph
                android:id="@+id/summaryGraph_weeks"
                android:layout_width="wrap_content"
                android:layout_height="82dp" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_section_months"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <de.smasi.tickmate.widgets.SummaryGraph
                android:id="@+id/summaryGraph_months"
                android:layout_width="wrap_content"
                android:layout_height="82dp" />
    
            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_section_quarters"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <de.smasi.tickmate.widgets.SummaryGraph
                android:id="@+id/summaryGraph_quarters"
                android:layout_width="wrap_content"
                android:layout_height="82dp" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_section_years"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <de.smasi.tickmate.widgets.SummaryGraph
                android:id="@+id/summaryGraph_years"
                android:layout_width="wrap_content"
                android:layout_height="82dp" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>